<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/interpretation_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ailab.aicardiotrainer.nav_interpretation.ui.home.CameraFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ailab.aicardiotrainer.nav_interpretation.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ailab.aicardiotrainer.nav_interpretation.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_annotation"
        android:name="com.ailab.aicardiotrainer.nav_interpretation.ui.annotation.AnnotationFragment"
        android:label="@string/title_annotation"
        tools:layout="@layout/fragment_annotation" />


</navigation>