<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 UET-AILAB
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_annotation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ailab.aicardiotrainer.annotationscreen.AnnotationActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">


    <LinearLayout
        android:id="@+id/ll_control1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bt_rv_folder_list"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bt_diagnosis"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="@string/label"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bt_zooming_and_drag"
            android:text="ZOOM"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bt_draw_point"
            android:text="POINT"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp" />

        <!--        <Button-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_draw_point"-->
        <!--            android:text="@string/point"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            />-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bt_draw_boundary"
            android:text="@string/boundary"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            />


        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/bt_draw_full_screen"
            android:text="X"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            />
        <!--        <ImageButton-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_rotate"-->
        <!--            android:src="@drawable/ic_rotate"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_control2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_control1"
        app:layout_constraintStart_toEndOf="@id/bt_rv_folder_list"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/bt_measure_length"
            android:text="@string/measure_length"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/bt_measure_area"
            android:text="@string/measure_area"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bt_auto_analysis"
            android:text="Auto"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bt_auto_copy"
            android:text="COPY"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            />

        <!--        <Button-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_test"-->
        <!--            android:text="Test"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            />-->

        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_measure_volume"-->
        <!--            android:text="@string/measure_volume"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            android:visibility="gone"-->
        <!--            />-->

        <!--        <Button-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_measure_ef"-->
        <!--            android:text="@string/ef"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            />-->
        <!--        -->
        <!--        <Button-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_auto_analysis"-->
        <!--            android:text="Auto-Analysis"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            tools:ignore="MissingConstraints" />-->

        <!--        <Button-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_mmode"-->
        <!--            android:text="@string/mmode"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            tools:ignore="MissingConstraints" />-->


        <!--        <Button-->
        <!--            android:id="@+id/bt_login"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_margin="2dp"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:text="LOGIN"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            tools:ignore="MissingConstraints" />-->

    </LinearLayout>

    <com.ailab.aicardiotrainer.annotationscreen.DrawCanvasView
        android:id="@+id/iv_draw_canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_property_frame"
        app:layout_constraintBottom_toTopOf="@id/inter_playback"
        app:layout_constraintStart_toEndOf="@id/bt_rv_folder_list"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_property_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/bt_rv_folder_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_control2"
        app:layout_constraintBottom_toTopOf="@+id/iv_draw_canvas">

        <CheckBox
            android:id="@+id/cb_esv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esv"
            style="@style/checkbox" />

        <CheckBox
            android:id="@+id/cb_edv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edv"
            style="@style/checkbox" />

        <CheckBox
            android:id="@+id/cb_perimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/perimeter"
            style="@style/checkbox" />

        <CheckBox
            android:id="@+id/cb_draw_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="MANUAL"
            android:checked="true"
            style="@style/checkbox" />

        <CheckBox
            android:id="@+id/cb_draw_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="AUTO"
            style="@style/checkbox" />

    </LinearLayout>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/rv_folder_list"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_rv_folder_list"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >


        <!--        <Button-->
        <!--            android:id="@+id/bt_login"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_margin="2dp"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:text="LOGIN"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            tools:ignore="MissingConstraints" />-->

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/bt_login"
            android:text="LOGIN"
            android:textColor="@color/colorRED"
            android:background="@drawable/custom_button_disabled_color"
            android:layout_margin="2dp"
            app:layout_constraintStart_toStartOf="parent"

            />
        <!--        <Button-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:id="@+id/bt_back_folder"-->
        <!--            android:text="BACK FOLDER"-->
        <!--            android:textColor="@color/colorRED"-->
        <!--            android:background="@drawable/custom_button_disabled_color"-->
        <!--            android:layout_margin="2dp"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->

        <!--            />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_folder_list"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/bt_back"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_folder_vertical" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_frame_info_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/bt_rv_folder_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inter_playback"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_frame_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inter_playback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_rv_folder_list"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/bt_save_data"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_save"
            android:background="@drawable/custom_image_button"/>

        <ImageButton
            android:id="@+id/bt_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_clear"
            android:background="@drawable/custom_image_button"/>

        <ImageButton
            android:id="@+id/bt_undo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_undo"
            android:background="@drawable/custom_image_button"/>

        <ImageButton
            android:id="@+id/bt_begin_frame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_start_frame"
            android:background="@drawable/custom_image_button"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/bt_end_frame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_end_frame"
            android:background="@drawable/custom_image_button"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/bt_play_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause"
            android:background="@drawable/custom_image_button"/>

        <ImageButton
            android:id="@+id/bt_prev_frame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_rewind"
            android:background="@drawable/custom_image_button" />

        <ImageButton
            android:id="@+id/bt_next_frame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_next_frame"
            android:background="@drawable/custom_image_button"
            />

        <ImageButton
            android:id="@+id/bt_next_esv_edv_or_annotation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:background="@drawable/custom_image_button"
            android:src="@drawable/ic_next_esv_edv"/>

    </LinearLayout>

    <include
        android:id="@+id/layout_calculator"
        layout="@layout/layout_calculator"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_property_frame" />

</androidx.constraintlayout.widget.ConstraintLayout>
